--- a/.github/workflows/jx_sign.yaml
+++ b/.github/workflows/jx_sign.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: lxk0301-京喜签到
+name: 京喜签到
 
 on:
     workflow_dispatch:
@@ -46,4 +46,4 @@ jobs:
                   QYWX_AM: ${{ github.event.client_payload.QYWX_AM || secrets.QYWX_AM }}
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
-                  SYNCURL: https://gitee.com/lxk0301/jd_scripts/raw/master/jx_sign.js
+                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jx_sign.js
