--- a/.github/workflows/jd_bean_change.yaml
+++ b/.github/workflows/jd_bean_change.yaml
@@ -46,5 +46,6 @@ jobs:
                   QYWX_AM: ${{ github.event.client_payload.QYWX_AM || secrets.QYWX_AM }}
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   #SYNCURL: https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_change.js
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_bean_change.js
