--- a/.github/workflows/jd_blueCoin.yaml
+++ b/.github/workflows/jd_blueCoin.yaml
@@ -48,4 +48,5 @@ jobs:
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   MARKET_COIN_TO_BEANS: ${{ github.event.client_payload.MARKET_COIN_TO_BEANS || secrets.MARKET_COIN_TO_BEANS }}
                   MARKET_REWARD_NOTIFY: ${{ github.event.client_payload.MARKET_REWARD_NOTIFY || secrets.MARKET_REWARD_NOTIFY }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_blueCoin.js
