--- a/.github/workflows/jd_bookshop.yaml
+++ b/.github/workflows/jd_bookshop.yaml
@@ -47,5 +47,6 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   BOOKSHOP_SHARECODES: ${{ github.event.client_payload.BOOKSHOP_SHARECODES || secrets.BOOKSHOP_SHARECODES }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_bookshop.js
                   IGNORE_COOKIE_BOOKSHOP: ${{ github.event.client_payload.IGNORE_COOKIE_BOOKSHOP || secrets.IGNORE_COOKIE_BOOKSHOP }} #口袋书店禁用某些cookie的执行,因为通知太烦了呀,比如要禁用第2和第四个的执行,则填入[2,4]即可,包含中括号哦
