--- a/.github/workflows/jd_crazy_joy.yaml
+++ b/.github/workflows/jd_crazy_joy.yaml
@@ -47,4 +47,5 @@ jobs:
                   JDJOY_HELPSELF: ${{ github.event.client_payload.JDJOY_HELPSELF || secrets.JDJOY_HELPSELF }}
                   JDJOY_APPLYJDBEAN: ${{ github.event.client_payload.JDJOY_APPLYJDBEAN || secrets.JDJOY_APPLYJDBEAN }}
                   JDJOY_SHARECODES: ${{ github.event.client_payload.JDJOY_SHARECODES || secrets.JDJOY_SHARECODES }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_crazy_joy.js
