--- a/.github/workflows/jd_plantBean.yaml
+++ b/.github/workflows/jd_plantBean.yaml
@@ -47,4 +47,5 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   PLANT_BEAN_SHARECODES: ${{ github.event.client_payload.PLANT_BEAN_SHARECODES || secrets.PLANT_BEAN_SHARECODES }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_plantBean.js
