--- a/.github/workflows/jd_joy_feedPets.yaml
+++ b/.github/workflows/jd_joy_feedPets.yaml
@@ -47,4 +47,5 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   JOY_FEED_COUNT: ${{ github.event.client_payload.JOY_FEED_COUNT || secrets.JOY_FEED_COUNT }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_joy_feedPets.js
