--- a/.github/workflows/jd_joy_steal.yaml
+++ b/.github/workflows/jd_joy_steal.yaml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 京东宠汪汪偷好友狗粮和积分
+name: 宠汪汪偷狗粮和积分
 
 on:
     workflow_dispatch:
@@ -25,7 +25,7 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行 【宠汪汪偷好友狗粮与积分】"
+            - name: "运行 【宠汪汪偷狗粮与积分】"
               run: |
                   node onlyOneExecute.js
               env:
@@ -48,4 +48,5 @@ jobs:
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   jdJoyStealCoin: ${{ github.event.client_payload.jdJoyStealCoin || secrets.jdJoyStealCoin }}
                   JOY_HELP_FEED: ${{ github.event.client_payload.JOY_HELP_FEED || secrets.JOY_HELP_FEED }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_joy_steal.js
