--- a/.github/workflows/jd_small_home.yaml
+++ b/.github/workflows/jd_small_home.yaml
@@ -48,4 +48,5 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   PURCHASE_SHOPS: ${{ github.event.client_payload.PURCHASE_SHOPS || secrets.PURCHASE_SHOPS }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_small_home.js
