--- a/.github/workflows/jd_superMarket.yaml
+++ b/.github/workflows/jd_superMarket.yaml
@@ -50,4 +50,5 @@ jobs:
                   jdBusinessCircleJump: ${{ github.event.client_payload.BUSINESS_CIRCLE_JUMP || secrets.BUSINESS_CIRCLE_JUMP }}
                   SUPERMARKET_LOTTERY: ${{ github.event.client_payload.SUPERMARKET_LOTTERY || secrets.SUPERMARKET_LOTTERY }}
                   SUPERMARKET_SHARECODES: ${{ github.event.client_payload.SUPERMARKET_SHARECODES || secrets.SUPERMARKET_SHARECODES }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_superMarket.js
