--- a/.github/workflows/jd_unbind.yaml
+++ b/.github/workflows/jd_unbind.yaml
@@ -46,4 +46,5 @@ jobs:
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   UN_BIND_CARD_NUM: ${{ github.event.client_payload.UN_BIND_CARD_NUM || secrets.UN_BIND_CARD_NUM }}
                   UN_BIND_STOP_CARD: ${{ github.event.client_payload.UN_BIND_STOP_CARD || secrets.UN_BIND_STOP_CARD }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_unbind.js
