--- a/.github/workflows/jd_unsubscribe.yaml
+++ b/.github/workflows/jd_unsubscribe.yaml
@@ -47,4 +47,5 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   UN_SUBSCRIBES: ${{ github.event.client_payload.UNSUBSCRIBE || secrets.UNSUBSCRIBE }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_unsubscribe.js
