--- a/.github/workflows/jd_joy_reward.yaml
+++ b/.github/workflows/jd_joy_reward.yaml
@@ -48,4 +48,5 @@ jobs:
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   JD_JOY_REWARD_NAME: ${{ github.event.client_payload.JD_JOY_REWARD_NAME || secrets.JD_JOY_REWARD_NAME }}
                   JD_JOY_REWARD_NOTIFY: ${{ github.event.client_payload.JD_JOY_REWARD_NOTIFY || secrets.JD_JOY_REWARD_NOTIFY }}
+                  GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_joy_reward.js
