--- a/.github/workflows/jd_nianCollect.yaml
+++ b/.github/workflows/jd_nianCollect.yaml
@@ -6,7 +6,7 @@ name: 京东炸年兽领爆竹
 on:
     workflow_dispatch:
     schedule:
-        - cron: "0 0 * * *"
+        - cron: "20 * * * *"
     watch:
         types: [started]
     repository_dispatch:
