--- a/.github/workflows/jd_fruit.yaml
+++ b/.github/workflows/jd_fruit.yaml
@@ -50,5 +50,5 @@ jobs:
                   FRUIT_NOTIFY_CONTROL: ${{ github.event.client_payload.FRUIT_NOTIFY_CONTROL || secrets.FRUIT_NOTIFY_CONTROL }}
                   FRUITSHARECODES: ${{ github.event.client_payload.FruitShareCodes || secrets.FruitShareCodes }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
-                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_fruit.js
+                  SYNCURL: https://raw.githubusercontent.com/an0na/jd_scripts_new/master/jd_fruit.js
                   IGNORE_COOKIE_JDNC: ${{ github.event.client_payload.IGNORE_COOKIE_JDNC || secrets.IGNORE_COOKIE_JDNC }} #京东农场禁用某些cookie的执行,因为通知太烦了呀,比如要禁用第2和第四个的执行,则填入[2,4]即可,包含中括号哦
