--- a/.github/workflows/jd_crazy_joy.yaml
+++ b/.github/workflows/jd_crazy_joy.yaml
@@ -48,4 +48,4 @@ jobs:
                   JDJOY_APPLYJDBEAN: ${{ github.event.client_payload.JDJOY_APPLYJDBEAN || secrets.JDJOY_APPLYJDBEAN }}
                   JDJOY_SHARECODES: ${{ github.event.client_payload.JDJOY_SHARECODES || secrets.JDJOY_SHARECODES }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
-                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_crazy_joy.js
+                  SYNCURL: https://raw.githubusercontent.com/an0na/jd_scripts_new/master/jd_crazy_joy.js
