--- a/.github/workflows/jd_nian.yaml
+++ b/.github/workflows/jd_nian.yaml
@@ -47,4 +47,5 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
+                  JDNIAN_SHARECODES: ${{ github.event.client_payload.JDNIAN_SHARECODES || secrets.JDNIAN_SHARECODES }}
                   SYNCURL: https://raw.githubusercontent.com/an0na/jd_scripts_new/master/jd_nian.js
