--- a/.github/workflows/jx_sign.yaml
+++ b/.github/workflows/jx_sign.yaml
@@ -25,7 +25,7 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行 【lxk0301-京喜签到】"
+            - name: "运行 【京喜签到】"
               run: |
                   node onlyOneExecute.js
               env:
