--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -1,4 +1,4 @@
-name: 自定义JOB执行
+name: 疯狂JOY挂机
 
 on:
     workflow_dispatch:
@@ -19,25 +19,13 @@ jobs:
             - name: 安装依赖包
               run: |
                   npm install
-            - name: "运行【自定义JOB执行】"
+            - name: "运行【疯狂JOY挂机】"
               run: |
                   node schedule.js
               env:
                   #推送专用
-                  PUSH_KEY: ${{ github.event.client_payload.PUSH_KEY || secrets.PUSH_KEY }}
-                  BARK_PUSH: ${{ github.event.client_payload.BARK_PUSH || secrets.BARK_PUSH }}
-                  BARK_SOUND: ${{ github.event.client_payload.BARK_SOUND || secrets.BARK_SOUND }}
                   TG_BOT_TOKEN: ${{ github.event.client_payload.TG_BOT_TOKEN || secrets.TG_BOT_TOKEN }}
                   TG_USER_ID: ${{ github.event.client_payload.TG_USER_ID || secrets.TG_USER_ID }}
-                  DD_BOT_TOKEN: ${{ github.event.client_payload.DD_BOT_TOKEN || secrets.DD_BOT_TOKEN }}
-                  DD_BOT_SECRET: ${{ github.event.client_payload.DD_BOT_SECRET || secrets.DD_BOT_SECRET }}
-                  IGOT_PUSH_KEY: ${{ github.event.client_payload.IGOT_PUSH_KEY || secrets.IGOT_PUSH_KEY }}
-                  QQ_SKEY: ${{ github.event.client_payload.QQ_SKEY || secrets.QQ_SKEY }}
-                  QQ_MODE: ${{ github.event.client_payload.QQ_MODE || secrets.QQ_MODE }}
-                  QYWX_KEY: ${{ github.event.client_payload.QYWX_KEY || secrets.QYWX_KEY }}
-                  QYWX_AM: ${{ github.event.client_payload.QYWX_AM || secrets.QYWX_AM }}
-                  PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
-                  PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   #通用配置
                   JD_COOKIE: ${{ github.event.client_payload.JD_COOKIE || secrets.JD_COOKIE }}
                   JD_DEBUG: ${{ github.event.client_payload.JD_DEBUG || secrets.JD_DEBUG }}
@@ -48,5 +36,5 @@ jobs:
                   GITHUBUSER: ${{ secrets.GITHUBUSER }}
                   TRIGGER_KEYWORDS: ${{ secrets.TRIGGER_KEYWORDS }}
                   #CRONTAB
-                  CRONTAB: ${{ '0 0 0,16 * * *' }} #定时在每天0和下午4点整执行一次
-                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_joy_reward.js #此处填写你要执行的js
+                  CRONTAB: ${{ '0 0 */6 * * *' }} #每6小时触发一次
+                  SYNCURL: https://github.com/an0na/jd_scripts_new/raw/master/jd_crazy_joy_coin.js #此处填写你要执行的js
