--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,8 +1,8 @@
 # File: .github/workflows/repo-sync.yml
 name: sync-sazs34-scripts
 on:
-  schedule:
-    - cron: '5 15 * * *'
+  #schedule:
+    #- cron: '5 15 * * *'
   workflow_dispatch:
   watch:
     types: started
