--- a/.github/workflows/B-jd_plantBean.yaml
+++ b/.github/workflows/B-jd_plantBean.yaml
@@ -48,4 +48,4 @@ jobs:
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   PLANT_BEAN_SHARECODES: ${{ github.event.client_payload.PLANT_BEAN_SHARECODES || secrets.PLANT_BEAN_SHARECODES }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
-                  SYNCURL: https://raw.githubusercontent.com/an0na/jd_scripts_new/master/jd_plantBean.js
+                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_plantBean.js
