--- a/.github/workflows/jd_crazy_joy_coin.yaml
+++ b/.github/workflows/jd_crazy_joy_coin.yaml
@@ -23,7 +23,7 @@ jobs:
             - name: 安装依赖包
               run: |
                   npm install
-            - name: "运行【京东疯狂JOY挂机】"
+            - name: "运行【疯狂JOY挂机】"
               run: |
                   node onlyOneExecute.js
               env:
@@ -45,4 +45,4 @@ jobs:
                   PUSH_PLUS_TOKEN: ${{ github.event.client_payload.PUSH_PLUS_TOKEN || secrets.PUSH_PLUS_TOKEN }}
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
-                  SYNCURL: https://raw.githubusercontent.com/an0na/jd_scripts_new/master/jd_crazy_joy_coin.js
+                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_crazy_joy_coin.js
