--- a/.github/workflows/jd_nian.yaml
+++ b/.github/workflows/jd_nian.yaml
@@ -48,4 +48,4 @@ jobs:
                   PUSH_PLUS_USER: ${{ github.event.client_payload.PUSH_PLUS_USER || secrets.PUSH_PLUS_USER }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
                   JDNIAN_SHARECODES: ${{ github.event.client_payload.JDNIAN_SHARECODES || secrets.JDNIAN_SHARECODES }}
-                  SYNCURL: https://raw.githubusercontent.com/an0na/jd_scripts_new/master/jd_nian.js
+                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_nian.js 
