--- a/.github/workflows/jd_sgmh.yaml
+++ b/.github/workflows/jd_sgmh.yaml
@@ -33,4 +33,5 @@ jobs:
                   TG_BOT_TOKEN: ${{ github.event.client_payload.TG_BOT_TOKEN || secrets.TG_BOT_TOKEN }}
                   TG_USER_ID: ${{ github.event.client_payload.TG_USER_ID || secrets.TG_USER_ID }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
+                  JDSGMH_SHARECODES: ${{ github.event.client_payload.JDSGMH_SHARECODES || secrets.JDSGMH_SHARECODES }}
                   SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_sgmh.js 
