--- a/.github/workflows/jd_immortal_answer.yml
+++ b/.github/workflows/jd_immortal_answer.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 集鞭炮赢京豆
+name: 神仙书院答题(截止2021.2.5)
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: "0 0,13 * * *"
+        - cron: "10 16 * * *"
     watch:
         types: [started]
     repository_dispatch:
-        types: jd_firecrackers
+        types: jd_immortal_answer
 
 jobs:
     build:
@@ -25,14 +25,12 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行 【集鞭炮赢京豆】"
+            - name: "运行 【神仙书院答题】"
               run: |
                   node onlyOneExecute.js
               env:
                   JD_COOKIE: ${{ github.event.client_payload.JD_COOKIE || secrets.JD_COOKIE }}
-                  JD_DEBUG: ${{ github.event.client_payload.JD_DEBUG || secrets.JD_DEBUG }}
-                  JD_USER_AGENT: ${{ github.event.client_payload.JD_USER_AGENT || secrets.JD_USER_AGENT }}
                   TG_BOT_TOKEN: ${{ github.event.client_payload.TG_BOT_TOKEN || secrets.TG_BOT_TOKEN }}
                   TG_USER_ID: ${{ github.event.client_payload.TG_USER_ID || secrets.TG_USER_ID }}
                   GITHUB: ${{ github.event.client_payload.GITHUB || secrets.GITHUB }}
-                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_firecrackers.js
+                  SYNCURL: https://github.com/an0na/jd_scripts/raw/master/jd_immortal_answer.js
